Create basic html structure and styling for user login display

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang='en-US'>
   <head>
-    <title>Webpack Starter Kit</title>
+    <title>The Grand Hotel</title>
   </head>
   <body>
-    <h1>Webpack Starter Kit</h1>
+    <header>
+      <nav>
+        <button><img src="./images/turing-logo.png" alt="turing logo" height="100px" width="100px"></button>
+        <h1>The Grand Hotel</h1>
+      </nav>
+    </header>
+    <!-- login -->
+    <div class='form-container'>
+      <ul class='login-form'>
+        <li><h2>Member Login</h2></li>
+        <li><input type='text' class='username' name='username'
+        placeholder='Username'></li>
+        <li><input type='password' class='password' name='password' placeholder='Password'></li>
+        <li><input type='button' name='submit' class='login-submit' value='Submit'>
+        <p class='login-error'>error message</p>
+    </ul>
+    </div>
+    <main>
+ <!-- Login -->
+    </main>
 
-    <img src="./images/turing-logo.png" alt="turing logo" height="100px" width="100px">
+   
 
     <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
   </body>
