Change your bookings text to a h3 element

--- a/src/index.html
+++ b/src/index.html
@@ -24,19 +24,14 @@
     <section class='guest-dashboard hide'>
       <div class='guest-welcome-box'>
         <h2 class='guest-name'>Guest Name</h2>
-        <h2 class='guest-money-spent'>Amount spent:</h2>  
+        <h3 class='guest-money-spent'>Amount spent:</h3>  
       </div>
       <div class='guest-bookings'>
-        <article class='bookings-header'>Your Bookings</article>
+        <h3 class='bookings-header'>Your Bookings</h3>
         <div class='reservation-button-container'>
           <button class='reservation-button'>Book A Room</button>
         </div>
       </div>
     </section>
-  </main>
-
-   
-
-    <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
   </body>
 </html>
