Add html for bookng stay with calendar

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       </nav>
     </header>
   <main>
-    <section class='login-form-container'>
+    <section class='login-form-container hide'>
       <ul class='login-form'>
         <li><h2>Login</h2></li>
         <li><input type='text' class='username' name='username'
@@ -33,5 +33,13 @@
         </div>
       </div>
     </section>
+    <section class="booking-display">
+      <ul class="book-room-menu">
+        <li><h2 class="booking-heading">Book Your Stay</h2></li>
+           <li><label for="selected-date">Select A Date</label></li>
+           <li><input type="date" class="selected-date" min="2020-01-01" title="select date input"></li>
+          <li><button class="search-booking">Search</button></li>
+      </ul>
+      </section>
   </body>
 </html>
