Edit header words

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       <section class='guest-info'>
         <h2 class='guest-name'>Guest Name</h2>
         <h3 class='guest-money-spent'>Amount spent: </h3>   
-        <button class='reservation-button'>Book a Room</button>
+        <button class='reservation-button'>New Reservation</button>
       </section>
       <section class='guest-bookings-container'>
         <h2 class='bookings-header'>Your Bookings</h2>
@@ -46,11 +46,12 @@
         <!-- </div> -->
         <!-- <section class='found-guest-bookings'> -->
           <h4 class='found-guest-info'>Guest Information: </h4>
+          <button class='manager-reservation-button'>New Reservation</button>
           <!-- </section> -->
       </section>
        
         <section class='manager-bookings-container'>
-          <h2 class='bookings-header'>Their Bookings</h2>
+          <h2 class='bookings-header'>Guest Bookings</h2>
         </section>
     </div>
     <!-- BOOKING DISPLAY -->
@@ -70,13 +71,10 @@
         <button class='search-rooms-button'>Search</button>
       </form>    
       <div class='search-results'>
-        <section class='available-rooms-container'>
-          <!-- // NEED TO GET THESE SHOWING ---- -->
-          <h2 class='bookings-header'>Search Results</h2>
-                <h3 class='no-search-results hide'>Sorry, there are no rooms available for your search. Please try adjusting your search
-                  criteria.</h3>
-          </section>
-        </section>
+      <section class='available-rooms-container'>
+        <h2 class='bookings-header'>Search Results</h2>
+      </section>
+        
       </div>
     </section> 
     </main>
