Add hide class to guest information

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         placeholder='Username'><br>
         <input type='password' class='password' aria-label='password field' placeholder='Password'><br>
         <input type='button' name='submit' class='login-submit' value='Submit'><br>
-        <p class='login-error'>error message</p>
+        <p class='login-error'></p>
       </form>
     </section>
     <!-- GUEST DASHBOARD -->
@@ -41,11 +41,7 @@
         <h4 class='rooms-percentage'>Percentage of Rooms Available Today: </h4>
         <input type='text' class='search-guest-input' title='search guest input'>
         <button class='search-guest-button' type='button'>Search</button>
-        <!-- <div class='book-room-button-container hide'>
-          <button class='book-a-room-button'>Book A Room</button> -->
-        <!-- </div> -->
-        <!-- <section class='found-guest-bookings'> -->
-          <h4 class='found-guest-info'>Guest Information: </h4>
+          <h4 class='found-guest-info hide'>Guest Information: </h4>
           <button class='manager-reservation-button'>New Reservation</button>
           <!-- </section> -->
       </section>
@@ -74,7 +70,9 @@
       <section class='available-rooms-container'>
         <h2 class='bookings-header'>Search Results</h2>
       </section>
-        
+      </div>
+      <div class="return-to-bookings">
+        <button class="return-button">Back</button>
       </div>
     </section> 
     </main>
