--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
         <h2 class='manager-name'>Manager Dashboard</h2>
         <h4 class='rooms-available-today'>Total Rooms Available Today: </h4>
         <h4 class='revenue-today'>Today's Revenue: </h4>
-        <h4 class='rooms-percentage'>Percentage of Rooms Available Today: </h4>
+        <h4 class='rooms-percentage'>Percentage of Rooms Occupied Today: </h4>
         <h4 class='search-for-guest'>Search for Guest: </h4>
         <input type='text' class='search-guest-input' title='search guest input'><br>
         <button class='search-guest-button' type='button'>Search</button>
